5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_1189.log
== TEST (2019-05-27 11:44:38) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
    i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- OUTPUT:
ACARARAJADADAJARARACA é palíndromo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 11:44:53) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- ERROR:
File "XXXX", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 11:44:55) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- ERROR:
File "XXXX", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:42:35) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- EXECUTION TIME:
0.141015
-- ERROR:
  File "/home/codebench/codes/1756/1189/main.py", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:42:36) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- ERROR:
File "XXXX", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:55:05) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- EXECUTION TIME:
0.19443
-- ERROR:
  File "/home/codebench/codes/1756/1189/main.py", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:55:05) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- ERROR:
File "XXXX", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:55:06) 
-- CODE:
s = input ("Digite o número a verificar, sem espaços:")
i = 0
f = len(s)-1 # posição do último caracter da string
while f > i and s[i] == s[f]:
    f = f - 1
   i = i + 1
if s[i] == s[f]:
    print("%s é palíndromo" % s)
else:
    print("%s não é palíndromo" % s)
-- ERROR:
File "XXXX", line 6
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
